<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:padding="15dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        >
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailid"
            android:hint="@string/emailid"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:id="@+id/password"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/loginbutton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OR"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"

            android:id="@+id/createaccount"/>
    </LinearLayout>


  </LinearLayout>