<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="3dp"
    app:cardCornerRadius="10dp"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listtitle"
                android:layout_margin="20dp"
                android:id="@+id/titlecard"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfdh"
                android:textSize="20sp"
                android:layout_marginVertical="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/dateAdded"
                android:layout_height="wrap_content"
                android:text="@string/dateadded"
                android:layout_margin="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/thought"
            android:layout_marginVertical="5dp"
            android:text="@string/listthoughts"
            />
    </LinearLayout>


</androidx.cardview.widget.CardView>