<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:shadowColor="@color/black"
            android:hint="@string/username"
            android:maxLines="1"
            />
        <AutoCompleteTextView
            android:shadowColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailid"
            android:hint="@string/emailid"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:shadowColor="@color/black"
            android:id="@+id/password"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/createaccount"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"

        android:id="@+id/createaccount"/>

</LinearLayout>